--- a/index.html
+++ b/index.html
@@ -1,1 +1,38 @@
-Hello World
+<!DOCTYPE html>
+<head>
+	<title>William Kranich</title>
+	
+	<link rel="stylesheet" type="text/css" href="css/font-awesome.min.css">
+	<link rel="stylesheet" type="text/css" href="css/bootstrap.css">
+</head>
+
+<body>
+	<div class="page-header" style="width:500px; margin: 0 auto;">
+		<center><h1 style="color:#fff;">William Kranich</h1></center>
+	</div>
+	
+	<div class="container-fluid" style="margin-top:15%; margin-bottom:15%;">
+		<div class="row" style="width:35%; margin:0 auto;">
+
+			<div class="col-md-4"><div style="text-align:center;">
+				<a href="https://github.com/wkranich">
+					<i class="fa fa-github-square fa-5x fa-inverse"></i>
+				</a>
+			</div></div>
+
+			<div class="col-md-4"><div style="text-align:center;">
+				<a href="https://www.linkedin.com/pub/william-kranich/71/40b/680">
+					<i class="fa fa-linkedin-square fa-5x fa-inverse"></i>
+				</a>
+			</div></div>
+
+			<div class="col-md-4"><div style="text-align:center;">
+				<a href="mailto:me@williamkranich.com">
+					<i class="fa fa-envelope-square fa-5x fa-inverse"></i>
+				</a>
+			</div></div>
+
+		</div>
+	</div>
+
+</body>
